Estilização da página inicial concluída

--- a/index.html
+++ b/index.html
@@ -37,11 +37,18 @@
             </div>
 
         </div>
-        <h1>Carolina Mendes</h1> 
-        <h2>Front-End developer</h2>
-        <div class="social-media">
-            <a href="#">LinkedIn</a>
-            <a href="#">GitHub</a>
+        <div class="container-data-img">
+            <div>
+                <h1>Carolina Mendes</h1>
+                <h2>Front-End developer</h2>
+                <div class="social-media">
+                    <a href="https://www.linkedin.com/in/dev-carolina-mendes-campos/" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/carolcampos22" target="_blank">GitHub</a>
+                </div>
+            </div>
+            <div>
+                <img src="./assets/perfil.png"/>
+            </div>
         </div>
     </header>
 
@@ -54,7 +61,9 @@
                 </div>
             </div>
             <div class="card-text">
-                <p><p>Descrição do Projeto </p></p>
+                <p>
+                <p>Descrição do Projeto </p>
+                </p>
             </div>
         </div>
 
@@ -66,7 +75,9 @@
                 </div>
             </div>
             <div class="card-text">
-                <p><p>Descrição do Projeto </p></p>
+                <p>
+                <p>Descrição do Projeto </p>
+                </p>
             </div>
         </div>
 
@@ -78,7 +89,9 @@
                 </div>
             </div>
             <div class="card-text">
-                <p><p>Descrição do Projeto </p></p>
+                <p>
+                <p>Descrição do Projeto </p>
+                </p>
             </div>
         </div>
 
@@ -97,7 +110,7 @@
 
     <footer class="footer">
         <p>Carolina Mendes</p>
-        <p>Copyright 2023</p>
+        <p>&copy; 2023</p>
     </footer>
 </body>
 
