Estruturação da página de projetos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Portfolio - Carolina Mendes</title>
+    <link rel="icon" type="image/svg" href="./assets/journals.svg">
+    <title>Portfólio - Carolina Mendes</title>
 </head>
 
 <body>
@@ -23,13 +24,13 @@
                     <nav class="menu-items">
                         <ul>
                             <li>
-                                <a href="#">Home</a>
+                                <a href="/index.html">Home</a>
                             </li>
                             <li>
-                                <a href="#">Projetos</a>
+                                <a href="/projects.html">Projetos</a>
                             </li>
                             <li>
-                                <a href="#">Sobre</a>
+                                <a href="/about.html">Sobre</a>
                             </li>
                         </ul>
                     </nav>
@@ -46,7 +47,7 @@
                     <a href="https://github.com/carolcampos22" target="_blank">GitHub</a>
                 </div>
             </div>
-            <div>
+            <div class="perfil-img">
                 <img src="./assets/perfil.png"/>
             </div>
         </div>
@@ -54,56 +55,79 @@
 
     <main class="container">
         <div class="card-container">
-            <div class="card">
-                <div class="card-wrapper">
-                    <h1>Projeto 1</h1>
-                    <p>Vem ver!</p>
+            <a href="https://pokedex-next-jt7t8hqqd-carolcampos22.vercel.app/" target="_blank">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h1>Pokédex</h1>
+                        <p>Vem ver!</p>
+                    </div>
                 </div>
-            </div>
+            </a>
             <div class="card-text">
                 <p>
-                <p>Descrição do Projeto </p>
+                <p>Pokédex simples criada com React, Next.js e CSS Modules. Nele é possível visualizsr os Pokémon, fazer busca e ir para para a página de detalhes. </p>
                 </p>
             </div>
         </div>
 
         <div class="card-container">
-            <div class="card">
-                <div class="card-wrapper">
-                    <h1>Projeto 2</h1>
-                    <p>Vem ver!</p>
+            <a href="https://dependent-thumb.surge.sh/" target="_blank">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h1>Multiverso Spiderman</h1>
+                        <p>Vem ver!</p>
+                    </div>
                 </div>
-            </div>
+            </a>
             <div class="card-text">
                 <p>
-                <p>Descrição do Projeto </p>
+                <p>Site baseado nas trilogias de Homem-Aranha, das três versões principais. Cada uma dessas versões possuem páginas para cada um de seus filmes, com trailers e fotos. O projeto foi criado utitlizando HTML, CSS e JavaScript. </p>
                 </p>
             </div>
         </div>
 
         <div class="card-container">
-            <div class="card">
-                <div class="card-wrapper">
-                    <h1>Projeto 3</h1>
-                    <p>Vem ver!</p>
+            <a href="https://campos-rock-shop.surge.sh/" target="_blank">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h1>Campos RockShop!</h1>
+                        <p>Vem ver!</p>
+                    </div>
                 </div>
-            </div>
+            </a>
             <div class="card-text">
-                <p>
-                <p>Descrição do Projeto </p>
-                </p>
+                <p>Site de venda de produtos voltados ao público roqueiro. As teconologias utilizadas foram HTML, CSS, JavaScript e Bootstrap. </p>
             </div>
         </div>
 
         <div class="card-container">
-            <div class="card">
-                <div class="card-wrapper">
-                    <h1>Projeto 4</h1>
-                    <p>Vem ver!</p>
+            <a href="https://spooky-bone.surge.sh/" target="_blank">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h1>Cookenu</h1>
+                        <p>Vem ver!</p>
+                    </div>
                 </div>
-            </div>
+            </a>
             <div class="card-text">
-                <p>Descrição do Projeto </p>
+                <p>
+                <p>Livro de receitas onde, após o cadastro, é possível visualizar todas as receitas disponíveis e seus detalhes, além de adicionar novas receitas. Site criado utilizando React, Styled-Components e API REST. </p>
+                </p>
+            </div>
+        </div>
+
+
+        <div class="card-container">
+            <a href="/projects.html">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h1>Mais projetos...</h1>
+                        <p>Vem ver!</p>
+                    </div>
+                </div>
+            </a>
+            <div class="card-text">
+                <p> Clique para ver todos os projetos! </p>
             </div>
         </div>
     </main>
