Página de projetos concluída

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
             </a>
             <div class="card-text">
-                <p>Site de venda de produtos voltados ao público roqueiro. As teconologias utilizadas foram HTML, CSS, JavaScript e Bootstrap. </p>
+                <p>Site de venda de produtos voltados ao público roqueiro. As tecnologias utilizadas foram HTML, CSS, JavaScript e Bootstrap. </p>
             </div>
         </div>
 
