--- a/projects.html
+++ b/projects.html
@@ -10,98 +10,98 @@
 </head>
 
 <body>
-    <h1>Projetos</h1>
+    <header>
+      <h1>Projetos</h1>
+    </header>
+
     <div class="main-projects">
+
+      <div class="card-bs" style="width: 18rem; height: 30em;">
+        <img src="/assets/potter.png" class="card-bs-img-top" alt="Potterpedia">
+        <div class="card-bs-body">
+          <h3 class="card-bs-title">Potterpedia</h3>
+          <p class="card-bs-text">Site com os principais personagens da saga Harry Potter, bem como os feitiços, utilizando a HP-API. Projeto em desenvolvimento, criado com React.js e styled-components.</p>
+          <div style="margin-top: 10vh;">
+            <a href="https://github.com/carolcampos22/projeto-potter" class="btn btn-primary" target="_blank">Ir para repositório no GitHub</a>
+          </div>
+        </div>
         
-        <div class="card-bs" style="width: 18rem;">
-            <img src="/assets/pokedex.png" class="card-bs-img-top" alt="...">
+      </div>
+        
+        <div class="card-bs" style="width: 18rem; height: 30em;">
+            <img src="/assets/pokedex.png" class="card-bs-img-top" alt="Pokédex">
             <div class="card-bs-body">
               <h3 class="card-bs-title">Pokédex</h3>
               <p class="card-bs-text">Pokédex simples criada com React, Next.js e CSS Modules. Nele é possível visualizsr os Pokémon, fazer busca e ir para para a página de detalhes.</p>
-              <a href="https://github.com/carolcampos22/pokedex-next" class="btn btn-primary" target="_blank">Ir para repositório no GitHub</a>
+            <div style="margin-top: 10vh;"> <a href="https://github.com/carolcampos22/pokedex-next" class="btn btn-primary" target="_blank">Ir para repositório no GitHub</a></div>
             </div>
           </div>
 
-          <div class="card-bs" style="width: 18rem;">
-            <img src="..." class="card-bs-img-top" alt="...">
+          <div class="card-bs" style="width: 18rem; height: 30em;">
+            <img src="/assets/spiderman.png" class="card-bs-img-top" alt="Multiverso Spiderman">
             <div class="card-bs-body">
-              <h3 class="card-bs-title">Card-bs title</h3>
-              <p class="card-bs-text">Some quick example text to build on the card-bs title and make up the bulk of the card-bs's content.</p>
-              <a href="#" class="btn btn-primary">Ir para repositório no GitHub</a>
+              <h3 class="card-bs-title">Multiverso Spiderman</h3>
+              <p class="card-bs-text">Site baseado nas trilogias de Homem-Aranha, das três versões principais. Cada uma dessas versões possuem páginas para cada um de seus filmes, com trailers e fotos. O projeto foi criado utitlizando HTML, CSS e JavaScript.</p>
+              <div style="margin-top: 5vh;">
+                <a href="https://github.com/carolcampos22/projeto-multiverso-spiderman" target="_blank" class="btn btn-primary">Ir para repositório no GitHub</a>
+              </div>
             </div>
           </div>
 
-          <div class="card-bs" style="width: 18rem;">
-            <img src="..." class="card-bs-img-top" alt="...">
+          <div class="card-bs" style="width: 18rem; height: 30em;">
+            <img src="/assets/crs.png" class="card-bs-img-top" alt="Campos RockShop">
             <div class="card-bs-body">
-              <h3 class="card-bs-title">Card-bs title</h3>
-              <p class="card-bs-text">Some quick example text to build on the card-bs title and make up the bulk of the card-bs's content.</p>
-              <a href="#" class="btn btn-primary">Ir para repositório no GitHub</a>
+              <h3 class="card-bs-title">Campos RockShop!</h3>
+              <p class="card-bs-text">Site de venda de produtos voltados ao público roqueiro. As tecnologias utilizadas foram HTML, CSS, JavaScript e Bootstrap.</p>
+              <div style="margin-top: 13vh;">
+                <a href="https://github.com/carolcampos22/projeto-html-css-bootstrap-descomplica" class="btn btn-primary" target="_blank">Ir para repositório no GitHub</a>
+              </div>
             </div>
           </div>
 
-          <div class="card-bs" style="width: 18rem;">
-            <img src="..." class="card-bs-img-top" alt="...">
+          <div class="card-bs" style="width: 18rem; height: 30em;">
+            <img src="/assets/cookenu.png" class="card-bs-img-top" alt="Cookenu">
             <div class="card-bs-body">
-              <h3 class="card-bs-title">Card-bs title</h3>
-              <p class="card-bs-text">Some quick example text to build on the card-bs title and make up the bulk of the card-bs's content.</p>
-              <a href="#" class="btn btn-primary">Ir para repositório no GitHub</a>
+              <h3 class="card-bs-title">Cookenu</h3>
+              <p class="card-bs-text">Livro de receitas onde, após o cadastro, é possível visualizar todas as receitas disponíveis e seus detalhes, além de adicionar novas receitas. Site criado utilizando React, Styled-Components e API REST. </p>
+              <div style="margin-top: 5vh;">
+                <a href="https://github.com/carolcampos22/projeto-cookenu" class="btn btn-primary">Ir para repositório no GitHub</a>
+              </div>
             </div>
           </div>
 
-          <div class="card-bs" style="width: 18rem;">
-            <img src="..." class="card-bs-img-top" alt="...">
+          <div class="card-bs" style="width: 18rem; height: 30em;">
+            <img src="/assets/your-trip.png" class="card-bs-img-top" alt="Your Trip">
             <div class="card-bs-body">
-              <h3 class="card-bs-title">Card-bs title</h3>
-              <p class="card-bs-text">Some quick example text to build on the card-bs title and make up the bulk of the card-bs's content.</p>
-              <a href="#" class="btn btn-primary">Ir para repositório no GitHub</a>
+              <h3 class="card-bs-title">Your Trip</h3>
+              <p class="card-bs-text">Site de venda de pacotes de viagem. Foi criado utilizando HTML e Bootstrap.</p>
+              <div style="margin-top: 15vh;">
+                <a href="https://github.com/carolcampos22/projeto-your-trip" target="_blank" class="btn btn-primary">Ir para repositório no GitHub</a>
+              </div>
             </div>
           </div>
 
-          <div class="card-bs" style="width: 18rem;">
-            <img src="..." class="card-bs-img-top" alt="...">
+          <div class="card-bs" style="width: 18rem; height: 30em;">
+            <img src="/assets/techcampos.png" class="card-bs-img-top" alt="TechCampos">
             <div class="card-bs-body">
-              <h3 class="card-bs-title">Card-bs title</h3>
-              <p class="card-bs-text">Some quick example text to build on the card-bs title and make up the bulk of the card-bs's content.</p>
-              <a href="#" class="btn btn-primary">Ir para repositório no GitHub</a>
+              <h3 class="card-bs-title">TechCampos</h3>
+              <p class="card-bs-text">Simulador de um carrinho de compras de um site de venda de produtos voltados à tecnologia. Foi criado com React.js e styled-components.</p>
+              <div style="margin-top: 10vh;">
+                <a href="https://github.com/carolcampos22/projeto-js-react" class="btn btn-primary" target="_blank">Ir para repositório no GitHub</a>
+              </div>
             </div>
           </div>
 
-          <div class="card-bs" style="width: 18rem;">
-            <img src="..." class="card-bs-img-top" alt="...">
+
+          <div class="card-bs" style="width: 18rem; height: 30em;">
+            <img src="/assets/labescola.png" class="card-bs-img-top" alt="LabEscola">
             <div class="card-bs-body">
-              <h3 class="card-bs-title">Card-bs title</h3>
-              <p class="card-bs-text">Some quick example text to build on the card-bs title and make up the bulk of the card-bs's content.</p>
-              <a href="#" class="btn btn-primary">Ir para repositório no GitHub</a>
+              <h3 class="card-bs-title">LabEscola</h3>
+              <p class="card-bs-text">Site que simula uma escola de programação. Nele é possível buscar por cursos, alunos e turmas. Também é possível cadastrar novos cursos, matricular novos alunos e fazer simulações de compra de cursos. Site criado com HTML, CSS e JavaScript.</p>
+              <a href="https://github.com/carolcampos22/projeto-intro-web-js" class="btn btn-primary" target="_blank">Ir para repositório no GitHub</a>
             </div>
           </div>
 
-          <div class="card-bs" style="width: 18rem;">
-            <img src="..." class="card-bs-img-top" alt="...">
-            <div class="card-bs-body">
-              <h3 class="card-bs-title">Card-bs title</h3>
-              <p class="card-bs-text">Some quick example text to build on the card-bs title and make up the bulk of the card-bs's content.</p>
-              <a href="#" class="btn btn-primary">Ir para repositório no GitHub</a>
-            </div>
-          </div>
-
-          <div class="card-bs" style="width: 18rem;">
-            <img src="..." class="card-bs-img-top" alt="...">
-            <div class="card-bs-body">
-              <h5 class="card-bs-title">Card-bs title</h5>
-              <p class="card-bs-text">Some quick example text to build on the card-bs title and make up the bulk of the card-bs's content.</p>
-              <a href="#" class="btn btn-primary">Ir para repositório no GitHub</a>
-            </div>
-          </div>
-
-          <div class="card-bs" style="width: 18rem;">
-            <img src="..." class="card-bs-img-top" alt="...">
-            <div class="card-bs-body">
-              <h5 class="card-bs-title">Card-bs title</h5>
-              <p class="card-bs-text">Some quick example text to build on the card-bs title and make up the bulk of the card-bs's content.</p>
-              <a href="#" class="btn btn-primary">Ir para repositório no GitHub</a>
-            </div>
-          </div>
     </div>
 </body>
 <footer class="footer">
