Responsividade, página de about e finalização da estilização.

--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
-    <header>
+    <header class="header-projects">
       <h1>Projetos</h1>
+      <div>
+        <a href="/index.html">Página inicial</a>
+      </div>
     </header>
 
     <div class="main-projects">
@@ -20,8 +23,8 @@
         <img src="/assets/potter.png" class="card-bs-img-top" alt="Potterpedia">
         <div class="card-bs-body">
           <h3 class="card-bs-title">Potterpedia</h3>
-          <p class="card-bs-text">Site com os principais personagens da saga Harry Potter, bem como os feitiços, utilizando a HP-API. Projeto em desenvolvimento, criado com React.js e styled-components.</p>
-          <div style="margin-top: 10vh;">
+          <p class="card-bs-text">Site com os principais personagens da saga Harry Potter, bem como os feitiços, utilizando a HP-API. Projeto em desenvolvimento, criado com React.js, API Rest e styled-components.</p>
+          <div style="margin-top: 7vh;">
             <a href="https://github.com/carolcampos22/projeto-potter" class="btn btn-primary" target="_blank">Ir para repositório no GitHub</a>
           </div>
         </div>
@@ -32,7 +35,7 @@
             <img src="/assets/pokedex.png" class="card-bs-img-top" alt="Pokédex">
             <div class="card-bs-body">
               <h3 class="card-bs-title">Pokédex</h3>
-              <p class="card-bs-text">Pokédex simples criada com React, Next.js e CSS Modules. Nele é possível visualizsr os Pokémon, fazer busca e ir para para a página de detalhes.</p>
+              <p class="card-bs-text">Pokédex simples criada com React, Next.js e CSS Modules e utilizando a PokeAPI. Nele é possível visualizar os Pokémon, fazer busca e ir para para a página de detalhes.</p>
             <div style="margin-top: 10vh;"> <a href="https://github.com/carolcampos22/pokedex-next" class="btn btn-primary" target="_blank">Ir para repositório no GitHub</a></div>
             </div>
           </div>
