--- a/about.html
+++ b/about.html
@@ -8,7 +8,27 @@
     <title>Sobre</title>
 </head>
 <body>
-    <h1>Sobre mim</h1>
+    <header class="header-projects">
+        <h1>Sobre mim</h1>
+        <div>
+          <a href="/index.html">Página inicial</a>
+        </div>
+      </header>
+
+      <main class="main-about">
+        <div class="text-about">
+            <p>Olá! Meu nome é Carolina, tenho 34 anos e sou formada em Desenvolvimento Web Front-End pelo bootcamp Instituto Nu by Descomplica. Além disso, há cerca de um ano eu estudo Desenvolvimento Web Full-Stack no bootcamp da Labenu. Nos meus estudos aprendi diversas tecnologias: HTMl, CSS, JavaScript, React.js, Styled-components, React hooks, Next.js, APIs Rest e Bootstrap. </p>
+            <p>Minha jornada no mundo da programação se iniciou na faculdade de Física Médica, onde cursei algumas disciplinas que envolviam programação. Encontrei muitas dificuldades e desafios, mas isso, ao invés de me fazer desistir ou detestar programação, despertou em mim uma paixão pela área, entusiasmo e curiosidade de aprender sempre mais. Assim, eu tenho me dedicado exclusivamente a cursos e bootcamps de desenvolvimento web. </p>
+            <p>Em meus projetos, crio interfaces intuitivas e responsivas, sempre em busca da melhor experiência do usuário. Trabalho com frameworks como React.js e Next.js, aprimorando minha capacidade de criar aplicações dinâmicas e eficientes. Além disso, utilizo o Styled-components, que me permite explorar o poder da estilização no nível de componentes. Cada projeto que crio contribui para minha evolução como desenvolvedora e demonstra minha capacidade de resolver problemas de forma criativa e eficiente, evoluindo a cada novo projeto.</p>
+            <p>O que mais me motiva como desenvolvedora é a busca contínua por aprender e enfrentar novos desafios. Sou movida pela curiosidade e pelo desejo de me manter atualizada em relação às últimas tendências e melhores práticas do desenvolvimento front-end. Além disso, valorizo o trabalho em equipe e a troca de conhecimento, pois acredito que colaborar com outros profissionais é uma maneira valiosa de crescer e progredir no campo da tecnologia.</p>
+            <p>Atualmente, estou entusiasmada com a perspectiva de ingressar em uma equipe inovadora e contribuir com minhas habilidades no desenvolvimento web front-end. Sou apaixonada por construir produtos que tenham um impacto positivo na vida das pessoas e estou ansiosa para fazer parte de projetos desafiadores e significativos.     Se você está procurando um desenvolvedor web front-end dedicado, criativo e pronto para enfrentar novos desafios, adoraria ter a oportunidade de trabalhar juntos. Vamos conversar sobre como posso contribuir com sua equipe e tornar suas ideias realidade!</p>
+        </div>
+      </main>
+
+      <footer class="footer">
+        <p>Carolina Mendes</p>
+        <p>&copy; 2023</p>
+    </footer>
     
 </body>
 </html>
