Adição dos links dos sites dos projetos

--- a/projects.html
+++ b/projects.html
@@ -2,117 +2,147 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" type="image/svg" href="./assets/journals.svg">
-    <title>Projetos</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="icon" type="image/svg" href="./assets/journals.svg">
+  <title>Projetos</title>
 </head>
 
+
 <body>
-    <header class="header-projects">
-      <h1>Projetos</h1>
-      <div>
-        <a href="/index.html">Página inicial</a>
-      </div>
-    </header>
+  <header class="header-projects">
+    <h1>Projetos</h1>
+    <div>
+      <a href="/index.html">Página inicial</a>
+    </div>
+  </header>
 
-    <div class="main-projects">
+  <div class="main-projects">
 
-      <div class="card-bs" style="width: 18rem; height: 30em;">
-        <img src="/assets/potter.png" class="card-bs-img-top" alt="Potterpedia">
-        <div class="card-bs-body">
-          <h3 class="card-bs-title">Potterpedia</h3>
-          <p class="card-bs-text">Site com os principais personagens da saga Harry Potter, bem como os feitiços, utilizando a HP-API. Projeto em desenvolvimento, criado com React.js, API Rest e styled-components.</p>
-          <div style="margin-top: 7vh;">
-            <a href="https://github.com/carolcampos22/projeto-potter" class="btn btn-primary" target="_blank">Ir para repositório no GitHub</a>
-          </div>
+    <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/potter.png" class="card-bs-img-top" alt="Potterpedia">
+      <div class="card-bs-body">
+        <h3 class="card-bs-title">Potterpedia</h3>
+        <p class="card-bs-text">Site com os principais personagens da saga Harry Potter, bem como os feitiços,
+          utilizando a HP-API. Projeto em desenvolvimento, criado com React.js, API Rest e styled-components.</p>
+        <div style="margin-top: 5vh;">
+         <a href="https://potterpedia-ebon.vercel.app/" class="btn btn-primary" target="_blank">Visitar página</a><br /> 
+          <a href="https://github.com/carolcampos22/projeto-potter" class="btn btn-primary" target="_blank">Ir para
+            repositório no GitHub</a>
         </div>
-        
       </div>
-        
-        <div class="card-bs" style="width: 18rem; height: 30em;">
-            <img src="/assets/pokedex.png" class="card-bs-img-top" alt="Pokédex">
-            <div class="card-bs-body">
-              <h3 class="card-bs-title">Pokédex</h3>
-              <p class="card-bs-text">Pokédex simples criada com React, Next.js e CSS Modules e utilizando a PokeAPI. Nele é possível visualizar os Pokémon, fazer busca e ir para para a página de detalhes.</p>
-            <div style="margin-top: 10vh;"> <a href="https://github.com/carolcampos22/pokedex-next" class="btn btn-primary" target="_blank">Ir para repositório no GitHub</a></div>
-            </div>
-          </div>
-
-          <div class="card-bs" style="width: 18rem; height: 30em;">
-            <img src="/assets/spiderman.png" class="card-bs-img-top" alt="Multiverso Spiderman">
-            <div class="card-bs-body">
-              <h3 class="card-bs-title">Multiverso Spiderman</h3>
-              <p class="card-bs-text">Site baseado nas trilogias de Homem-Aranha, das três versões principais. Cada uma dessas versões possuem páginas para cada um de seus filmes, com trailers e fotos. O projeto foi criado utitlizando HTML, CSS e JavaScript.</p>
-              <div style="margin-top: 5vh;">
-                <a href="https://github.com/carolcampos22/projeto-multiverso-spiderman" target="_blank" class="btn btn-primary">Ir para repositório no GitHub</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="card-bs" style="width: 18rem; height: 30em;">
-            <img src="/assets/crs.png" class="card-bs-img-top" alt="Campos RockShop">
-            <div class="card-bs-body">
-              <h3 class="card-bs-title">Campos RockShop!</h3>
-              <p class="card-bs-text">Site de venda de produtos voltados ao público roqueiro. As tecnologias utilizadas foram HTML, CSS, JavaScript e Bootstrap.</p>
-              <div style="margin-top: 13vh;">
-                <a href="https://github.com/carolcampos22/projeto-html-css-bootstrap-descomplica" class="btn btn-primary" target="_blank">Ir para repositório no GitHub</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="card-bs" style="width: 18rem; height: 30em;">
-            <img src="/assets/cookenu.png" class="card-bs-img-top" alt="Cookenu">
-            <div class="card-bs-body">
-              <h3 class="card-bs-title">Cookenu</h3>
-              <p class="card-bs-text">Livro de receitas onde, após o cadastro, é possível visualizar todas as receitas disponíveis e seus detalhes, além de adicionar novas receitas. Site criado utilizando React, Styled-Components e API REST. </p>
-              <div style="margin-top: 5vh;">
-                <a href="https://github.com/carolcampos22/projeto-cookenu" class="btn btn-primary">Ir para repositório no GitHub</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="card-bs" style="width: 18rem; height: 30em;">
-            <img src="/assets/your-trip.png" class="card-bs-img-top" alt="Your Trip">
-            <div class="card-bs-body">
-              <h3 class="card-bs-title">Your Trip</h3>
-              <p class="card-bs-text">Site de venda de pacotes de viagem. Foi criado utilizando HTML e Bootstrap.</p>
-              <div style="margin-top: 15vh;">
-                <a href="https://github.com/carolcampos22/projeto-your-trip" target="_blank" class="btn btn-primary">Ir para repositório no GitHub</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="card-bs" style="width: 18rem; height: 30em;">
-            <img src="/assets/techcampos.png" class="card-bs-img-top" alt="TechCampos">
-            <div class="card-bs-body">
-              <h3 class="card-bs-title">TechCampos</h3>
-              <p class="card-bs-text">Simulador de um carrinho de compras de um site de venda de produtos voltados à tecnologia. Foi criado com React.js e styled-components.</p>
-              <div style="margin-top: 10vh;">
-                <a href="https://github.com/carolcampos22/projeto-js-react" class="btn btn-primary" target="_blank">Ir para repositório no GitHub</a>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="card-bs" style="width: 18rem; height: 30em;">
-            <img src="/assets/labescola.png" class="card-bs-img-top" alt="LabEscola">
-            <div class="card-bs-body">
-              <h3 class="card-bs-title">LabEscola</h3>
-              <p class="card-bs-text">Site que simula uma escola de programação. Nele é possível buscar por cursos, alunos e turmas. Também é possível cadastrar novos cursos, matricular novos alunos e fazer simulações de compra de cursos. Site criado com HTML, CSS e JavaScript.</p>
-              <a href="https://github.com/carolcampos22/projeto-intro-web-js" class="btn btn-primary" target="_blank">Ir para repositório no GitHub</a>
-            </div>
-          </div>
 
     </div>
+
+    <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/pokedex.png" class="card-bs-img-top" alt="Pokédex">
+      <div class="card-bs-body">
+        <h3 class="card-bs-title">Pokédex</h3>
+        <p class="card-bs-text">Pokédex simples criada com React, Next.js e CSS Modules e utilizando a PokeAPI. Nele é
+          possível visualizar os Pokémon, fazer busca e ir para para a página de detalhes.</p>
+        <div style="margin-top: 8vh;">
+          <a href="https://pokedex-next-jt7t8hqqd-carolcampos22.vercel.app/" class="btn btn-primary" target="_blank">Visitar página</a><br />
+          <a href="https://github.com/carolcampos22/pokedex-next" class="btn btn-primary" target="_blank">Ir para
+            repositório no GitHub</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/spiderman.png" class="card-bs-img-top" alt="Multiverso Spiderman">
+      <div class="card-bs-body">
+        <h3 class="card-bs-title">Multiverso Spiderman</h3>
+        <p class="card-bs-text">Site baseado nas trilogias de Homem-Aranha, das três versões principais. Cada uma dessas
+          versões possuem páginas para cada um de seus filmes, com trailers e fotos. O projeto foi criado utitlizando
+          HTML, CSS e JavaScript.</p>
+        <div style="margin-top: 3vh;">
+          <a href="https://dependent-thumb.surge.sh/" class="btn btn-primary" target="_blank">Visitar página</a><br />
+          <a href="https://github.com/carolcampos22/projeto-multiverso-spiderman" target="_blank"
+            class="btn btn-primary">Ir para repositório no GitHub</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/crs.png" class="card-bs-img-top" alt="Campos RockShop">
+      <div class="card-bs-body">
+        <h3 class="card-bs-title">Campos RockShop!</h3>
+        <p class="card-bs-text">Site de venda de produtos voltados ao público roqueiro. As tecnologias utilizadas foram
+          HTML, CSS, JavaScript e Bootstrap.</p>
+        <div style="margin-top: 11vh;">
+          <a href="https://campos-rock-shop.surge.sh/" class="btn btn-primary" target="_blank">Visitar página</a><br />
+          <a href="https://github.com/carolcampos22/projeto-html-css-bootstrap-descomplica" class="btn btn-primary"
+            target="_blank">Ir para repositório no GitHub</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/cookenu.png" class="card-bs-img-top" alt="Cookenu">
+      <div class="card-bs-body">
+        <h3 class="card-bs-title">Cookenu</h3>
+        <p class="card-bs-text">Livro de receitas onde, após o cadastro, é possível visualizar todas as receitas
+          disponíveis e seus detalhes, além de adicionar novas receitas. Site criado utilizando React, Styled-Components
+          e API REST. </p>
+        <div style="margin-top: 3vh;">
+          <a href="https://spooky-bone.surge.sh//" class="btn btn-primary" target="_blank">Visitar página</a><br />
+          <a href="https://github.com/carolcampos22/projeto-cookenu" class="btn btn-primary">Ir para repositório no
+            GitHub</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/your-trip.png" class="card-bs-img-top" alt="Your Trip">
+      <div class="card-bs-body">
+        <h3 class="card-bs-title">Your Trip</h3>
+        <p class="card-bs-text">Site de venda de pacotes de viagem. Foi criado utilizando HTML e Bootstrap.</p>
+        <div style="margin-top: 13vh;">
+          <a href="https://coherent-passenger.surge.sh/" class="btn btn-primary" target="_blank">Visitar página</a><br />
+          <a href="https://github.com/carolcampos22/projeto-your-trip" target="_blank" class="btn btn-primary">Ir para
+            repositório no GitHub</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/techcampos.png" class="card-bs-img-top" alt="TechCampos">
+      <div class="card-bs-body">
+        <h3 class="card-bs-title">TechCampos</h3>
+        <p class="card-bs-text">Simulador de um carrinho de compras de um site de venda de produtos voltados à
+          tecnologia. Foi criado com React.js e styled-components.</p>
+        <div style="margin-top: 8vh;">
+          <a href="https://techno-campos.surge.sh/" class="btn btn-primary" target="_blank">Visitar página</a><br />
+          <a href="https://github.com/carolcampos22/projeto-js-react" class="btn btn-primary" target="_blank">Ir para
+            repositório no GitHub</a>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="card-bs" style="width: 18rem; height: 30em;">
+      <img src="/assets/labescola.png" class="card-bs-img-top" alt="LabEscola">
+      <div class="card-bs-body">
+        <h3 class="card-bs-title">LabEscola</h3>
+        <p class="card-bs-text">Site que simula uma escola de programação. Nele é possível buscar por cursos, alunos e
+          turmas. Também é possível cadastrar novos cursos, matricular novos alunos e fazer simulações de compra de
+          cursos. Site criado com HTML, CSS e JavaScript.</p>
+        <div style="margin-top: -1vh;">
+          <a href="https://sable-steam.surge.sh/" class="btn btn-primary" target="_blank">Visitar página</a><br />
+          <a href="https://github.com/carolcampos22/projeto-intro-web-js" class="btn btn-primary" target="_blank">Ir
+            para repositório no GitHub</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </body>
 <footer class="footer">
-    <p>Carolina Mendes</p>
-    <p>&copy; 2023</p>
+  <p>Carolina Mendes</p>
+  <p>&copy; 2023</p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
+  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
 </html>
