Atualizaão da página About

--- a/about.html
+++ b/about.html
@@ -23,11 +23,10 @@
     <div class="text-about">
 
       <p>Olá! Meu nome é Carolina, sou Desenvolvedora Web Front-web há 1 ano. Faço o bootcamp da Labenu de
-        Desenvolvimento Web Full-Stack (voltado para o React.js) e também o Santander Bootcamp 2023 - Fullstack Java +
-        Angular, ambos com previsão para finalizar em outubro deste ano. Além disso, também participei do bootcamp
+        Desenvolvimento Web Full-Stack, com previsão para finalizar em outubro deste ano. Além disso, também participei do bootcamp
         Fundamentos de Desenvolvimento Web Front-end, do Instituto Nu by Descomplica, concluído em julho deste ano. Nos
         meus estudos aprendi diversas tecnologias: HTMl, CSS, JavaScript, React.js, Styled-components, React hooks,
-        Next.js, APIs Rest e Bootstrap. Agora, conforme mencionado, estou aprendendo Java e Angular. </p>
+        Next.js, APIs Rest e Bootstrap.</p>
       <p>Minha jornada no mundo da programação se iniciou na faculdade de Física Médica, onde cursei algumas disciplinas
         que envolviam programação (C/C++ e Python). Encontrei muitas dificuldades e desafios, mas isso, ao invés de me
         fazer desistir ou detestar programação, despertou em mim uma paixão pela área, entusiasmo e curiosidade de
